--- a/helm/install/values.yaml
+++ b/helm/install/values.yaml
@@ -35,7 +35,7 @@ relatedImages:
 singleNamespace: false
 
 # debug allows you to enable or disable the "debug" level of logging.
-debug: true
+debug: false
 
 # imagePullSecretNames is a list of secret names to use for pulling controller images.
 # More info: https://kubernetes.io/docs/concepts/containers/images/#specifying-imagepullsecrets-on-a-pod
