--- a/helm/install/values.yaml
+++ b/helm/install/values.yaml
@@ -1,52 +1,65 @@
----
-# controllerImages are used to run the operator's controllers.
-# The cluster image defined below runs the PostgresCluster and PGUpgrade controllers.
-controllerImages:
-  cluster: registry.developers.crunchydata.com/crunchydata/postgres-operator:ubi8-5.4.1-0
+apiVersion: helm.toolkit.fluxcd.io/v2beta1
+kind: HelmRelease
+metadata:
+  name: {{ cmo_pgo_release_name }}
+  namespace: {{ cmo_pgo_namespace }}
+spec:
+  interval: {{helm_release_reconcile_interval}}
+  chart:
+    spec:
+      chart: {{ dboperator_helmname }}
+      version: {{ pg_operator_chart_version }}
+      sourceRef:
+        kind: HelmRepository
+        name: {{ flux_repository_name }}
+        namespace: {{ cmo_pgo_namespace }}
+  dependsOn:
+    - name: {{ cert_manager_release_name }}
+  install:
+    remediation:
+      retries: {{component_retry_count}}
+  upgrade:
+    remediation:
+      retries: {{component_retry_count}}
+  values:
+    # controllerImages are used to run the PostgresCluster and PGUpgrade controllers.
+      controllerImages:
+        cluster: "{{ registry_dns }}:{{ docker_registry_service_port }}/{{postgres_operator_image}}:{{postgres_operator_image_tag}}"
+        upgrade: "{{ registry_dns }}:{{ docker_registry_service_port }}/{{postgres_operator_upgrade_image}}:{{postgres_operator_upgrade_image_tag}}"
 
-# relatedImages are used when an image is omitted from PostgresCluster or PGUpgrade specs.
-relatedImages:
-  postgres_15:
-    image: registry.developers.crunchydata.com/crunchydata/crunchy-postgres:ubi8-15.3-3
-  postgres_15_gis_3.3:
-    image: registry.developers.crunchydata.com/crunchydata/crunchy-postgres-gis:ubi8-15.3-3.3-3
-  postgres_14:
-    image: registry.developers.crunchydata.com/crunchydata/crunchy-postgres:ubi8-14.8-3
-  postgres_14_gis_3.1:
-    image: registry.developers.crunchydata.com/crunchydata/crunchy-postgres-gis:ubi8-14.8-3.1-3
-  postgres_14_gis_3.2:
-    image: registry.developers.crunchydata.com/crunchydata/crunchy-postgres-gis:ubi8-14.8-3.2-3
-  postgres_14_gis_3.3:
-    image: registry.developers.crunchydata.com/crunchydata/crunchy-postgres-gis:ubi8-14.8-3.3-3
-  pgadmin:
-    image: registry.developers.crunchydata.com/crunchydata/crunchy-pgadmin4:ubi8-4.30-16
-  pgbackrest:
-    image: registry.developers.crunchydata.com/crunchydata/crunchy-pgbackrest:ubi8-2.45-3
-  pgbouncer:
-    image: registry.developers.crunchydata.com/crunchydata/crunchy-pgbouncer:ubi8-1.19-3
-  pgexporter:
-    image: registry.developers.crunchydata.com/crunchydata/crunchy-postgres-exporter:ubi8-5.4.1-0
-  pgupgrade:
-    image: registry.developers.crunchydata.com/crunchydata/crunchy-upgrade:ubi8-5.4.1-0
+      # relatedImages are used when an image is omitted from PostgresCluster or PGUpgrade specs.
+      relatedImages:
+        postgres_14:
+          image: "{{ registry_dns }}:{{ docker_registry_service_port }}/{{crunchy_postgres_image}}:{{crunchy_postgres_tag}}"
+        pgadmin:
+          image: "{{ registry_dns }}:{{ docker_registry_service_port }}/{{crunchy_pgadmin_image}}:{{crunchy_pgadmin_tag}}"
+        pgbackrest:
+          image: "{{ registry_dns }}:{{ docker_registry_service_port }}/{{crunchy_pgbackrest_image}}:{{crunchy_pgbackrest_tag}}"
+        pgbouncer:
+          image: "{{ registry_dns }}:{{ docker_registry_service_port }}/{{crunchy_pgbouncer_image}}:{{crunchy_pgbouncer_tag}}"
+        pgexporter:
+          image: "{{ registry_dns }}:{{ docker_registry_service_port }}/{{crunchy_pgexporter_image}}:{{crunchy_pgexporter_tag}}"
+        pgupgrade:
+          image: "{{ registry_dns }}:{{ docker_registry_service_port }}/{{crunchy_pgupgrade_image}}:{{crunchy_pgupgrade_tag}}"
 
-# singleNamespace controls where PGO watches for PostgresClusters. When false,
-# PGO watches for and responds to PostgresClusters in all namespaces. When true,
-# PGO watches only the namespace in which it is installed.
-singleNamespace: false
+      # labels for the postgres operator "pgo" pod itself.
+      customLabels:
+        sidecar.istio.io/inject: "false"
 
-# debug allows you to enable or disable the "debug" level of logging.
-debug: true
+      # singleNamespace controls where PGO watches for PostgresClusters.
+      # When false, PGO watches for and responds to PostgresClusters in all namespaces.
+      # When true, PGO watches only the namespace in which it is installed.
+      # DA, We need to support multiple namespaces for installing multiple clusters, logical replication, independent hardware usage, and more.
+      # DA, We want to move to multiple database engines to split users into their own.
+      # DA, This should not be a public variable as consumers must not be able to change it.
+      singleNamespace: false
 
-# imagePullSecretNames is a list of secret names to use for pulling controller images.
-# More info: https://kubernetes.io/docs/concepts/containers/images/#specifying-imagepullsecrets-on-a-pod
-imagePullSecretNames: []
+      # Set this to true to prevent pgo from checking for updates online.
+      # It is good to keep track of this during development but never in release mode.
+      disable_check_for_upgrades: true
 
-# Resource configuration of the PostgresCluster and PGUpgrade controllers.
-resources:
-  controller: {}
+      # debug allows you to enable or disable the pgo "debug" level of logging.
+      debug: {{ pgo_debug }}
 
-# Define custom labels for PGO pods
-# Note: Defining labels that overlap with any Crunchy Data label, for example,
-# postgres-operator.crunchydata.com, will cause an error
-# customPodLabels:
-#  example.com: custom-label
+      # More info: https://kubernetes.io/docs/concepts/containers/images/#specifying-imagepullsecrets-on-a-pod
+      imagePullSecretNames: []
